--- a/GlobalExpertise/views/Login.resx
+++ b/GlobalExpertise/views/Login.resx
@@ -124,7 +124,7 @@
     <value>25</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="guna2TextBox3.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="passwordTextBox.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAKblJREFUeF7t
         3QuYZGdZ4HFJgJCEgKgB5PL4gCLgqoAiECByE5YgKiKwgqjLTW4RvIRFd1dbcCWMk56qw+lpnhZwlhhQ
@@ -308,7 +308,7 @@
         2Y8AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="guna2TextBox4.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="userNameTextBox.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAFVxJREFUeF7t
         3VFy3Dx2BtBsJavJS6r+reQ5NdZuZkFaUcJut21Z+iR1NwEQuDxTdV6+mhnbEglcAhfkf/zX//w3AHAy
